k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hris-app-service
  namespace: hris
  labels:
    app: hris-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hris-app
